--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@ body {
 }
 
 * {
-  color: var(--custom-color);
+  /* color: var(--custom-color);  this is done by me */
   font-family: var(--custom-font-family);
   box-sizing: border-box;
 }
