--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   --custom-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --custom-bg-color: rgb(255, 255, 255);
-  --custom-panel-color: rgb(255, 255, 255);
+  --custom-panel-color: rgb(22, 7, 7);
   --custom-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.8);
   --custom-color: rgb(78, 72, 99);
   --custom-color-brand: #ffffff;
@@ -314,12 +314,12 @@ input[disabled] {
 
 /* Button */
 
-/* button style is cancelled by me*/
+/* button style is cancelled by me */
 /* button,
-.button {
-  color: var(--custom-color);
-  border: var(--custom-border);
-  background-color: var(--custom-bg-color);
+.button { */
+  /* color: var(--custom-color); */
+  /* border: var(--custom-border); */
+  /* background-color: var(--custom-bg-color);
   display: inline-block;
   text-align: center;
   border-radius: var(--custom-border-radius);
@@ -327,14 +327,26 @@ input[disabled] {
   cursor: pointer;
   text-align: center;
   font-size: 0.9rem;
-  text-transform: uppercase;
+  text-transform: uppercase; */
+/* }  */
+/* button,
+.button:focus{
+  outline: none !important;
+  
 } */
+button {
+  /* outline: none !important;
+  border: none !important; */
+  box-shadow: none !important;
+  /* box-shadow:  rgba(0, 0, 255, .2); */
+}
 
+/* 
 button.primary,
 .button.primary {
-  background-color: var(--custom-color-brand);
+  background-color: var(--custom-color-brand); 
   border: 1px solid var(--custom-color-brand);
-}
+} */
 
 /* Widgets */
 
