--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,13 @@ h1 {
 .sun-editor-editable table.se-table-size-auto {
   min-width: 900px !important;
 }
+a.internal:link {
+  padding: 2px 8px;
+  font-weight: 500;
+  border-radius: 5px;
+  background: #f4eeeed6;
+  margin-top: 2px;
+}
 /* table,
 th,
 td {
