--- a/styles/globals.css
+++ b/styles/globals.css
@@ -260,7 +260,7 @@ label {
   margin: 5px 0;
   color: var(--custom-color-secondary);
   font-size: 0.8rem;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 /* input {
