--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,23 +14,26 @@ body {
 
   padding: 0;
   margin: 0;
-  font-family: var(--custom-font-family);
+  /* font-family: var(--custom-font-family); */
   background-color: var(--custom-bg-color);
-} 
+}
 
- * {
-  font-family: var(--custom-font-family);
+* {
+  /* font-family: var(--custom-font-family); */
   box-sizing: border-box;
-} 
+}
 
- html,
+html,
 body,
 #__next {
   height: fit-content;
   width: 100vw;
-  overflow-x: hidden;
   overflow-y: visible;
 }
+body {
+  overflow-x: hidden;
+}
+
 /* h1 {
   font-size: xx-large !important;
   font-weight: 700 !important;
@@ -57,7 +60,6 @@ td {
   padding: 15px;
   text-align: left;
 } */
-
 
 /* tr:hover {background-color: yellow;} */
 /* Grid */
@@ -351,7 +353,6 @@ button {
   /* box-shadow:  rgba(0, 0, 255, .2); */
 }
 
-
 /* button.primary,
 .button.primary {
   background-color: var(--custom-color-brand); 
@@ -533,23 +534,21 @@ button {
   margin-bottom: 10px;
   text-decoration: none;
 } */
-width
-::-webkit-scrollbar {
+width ::-webkit-scrollbar {
   width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(230, 226, 226); 
-  border-radius: 10px;
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgb(181, 178, 178); 
+  box-shadow: inset 0 0 5px rgb(230, 226, 226);
   border-radius: 10px;
 }
 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(181, 178, 178);
+  border-radius: 10px;
+}
 
 .showScrollOnHover::-webkit-scrollbar {
   width: 0px;
