--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,15 +11,15 @@ body {
   --custom-border: 1px solid #333;
   --custom-border-radius: 5px;
   --custom-spacing: 5px;
-
-  padding: 0;
-  margin: 0;
-  /* font-family: var(--custom-font-family); */
+/* 
+  padding: 10px 10px 10px 10px;
+  margin: 10px 10px 10px 10px; */
+  font-family: var(--custom-font-family);
   background-color: var(--custom-bg-color);
 }
 
 * {
-  /* font-family: var(--custom-font-family); */
+  font-family: var(--custom-font-family);
   box-sizing: border-box;
 }
 
@@ -27,7 +27,7 @@ html,
 body,
 #__next {
   height: fit-content;
-  width: 100vw;
+  /* width: 100vw; // this was causing body hidden behind scrollbar  */
   overflow-y: visible;
 }
 body {
